--- a/index.html
+++ b/index.html
@@ -367,8 +367,6 @@
 
 </div>
 
-
-
       <!-- section contact -->
       <section class="my-5" id="contact">
          <div class="container">
@@ -425,9 +423,7 @@
 
 
 <!-- scroll up -->
-<a href="#" class="scrollup" id="scroll-up">
-    <i class="uil uil-arrow-up scrollup_icon"></i>
-</a>
+<button onclick="topFunction()" id="myBtn" title="Go to top"> <i class="uil uil-arrow-up scrollup_icon"></i></button>
    
 <!-- Js -->
 <script src="./assets/js/bootstrap.bundle.min.js"></script>
